kubernetes/overlays/production/default/argo/argo-ci.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: argo-ci
  name: argo-ci
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: argo-ci
  template:
    metadata:
      labels:
        app: argo-ci
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: tenlastic.com/low-priority
                    operator: Exists
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - argo-ci
                topologyKey: kubernetes.io/hostname
      containers:
        - name: argo-ci
          image: argoproj/argoci:latest
          ports:
            - containerPort: 8001
            - containerPort: 8002
          resources:
            requests:
              cpu: 50m
      serviceAccountName: argo-ci
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: argo-ci
    service: argo-ci
  name: argo-ci
  namespace: default
spec:
  ports:
    - port: 8001
      name: webhook
    - port: 8002
      name: ui
  selector:
    app: argo-ci
